# richard-chukwu

./: .gitignore  .pnp.cjs  300.richard-chukwu.js  404.html  Cargo.toml  LICENSE_MIT  index.html  main.css  package-lock.json  package.json  postcss.config.js  richard-chukwu.js  richard-chukwu.wasm  style.scss  tailwind.config.js  webpack.config.js
.github/workflows/: cicd.yaml
markdown/: homepage.md
markdown/projects/: fitmyeis.md  pymultipleis.md
src/: app.rs  lib.rs
src/components/: articles.rs  footer.rs  gallery.rs  home.rs  mod.rs  navbar.rs  projects.rs  secure.rs  trivia.rs
static/: index.html
static/markdown/articles/: article_01_15-04-2024.md  article_01_16-04-2024.md  article_01_23-04-2024.md
static/markdown/projects/: fitmyeis.md  plexisort.md  project1.md  project2.md  project3.md  pymultipleis.md
static/markdown/quizzes/: european_capitals.md
